# newtech_data

kb-estate-collector/: .env.example  .gitignore  CLAUDE.md  INTEGRATION.md  README.md  alembic.ini  api_test_result.json  api_test_result2.json  batch_collect_listings.py  capture_listings.py  capture_params.py  capture_transaction.py  captured_listing_calls.json  captured_stutcd_body.json  captured_stutcd_parsed.json  discovery_complex_report.json  discovery_report.json  docker-compose.yml  facility_deep.json  facility_discovery.json  listing_sample.json  pyproject.toml  requirements.txt  test_apis.py  test_apis2.py  test_apis3.py  test_listing_api.py
kb-estate-collector/docker/: api.Dockerfile  worker.Dockerfile
kb-estate-collector/docs/: 01-프로젝트-개요.md  02-아키텍처-상세.md  03-교훈-및-주의사항.md  04-다음-단계-가이드.md  05-개발-검증-결과.md  06-프론트엔드-및-기동-가이드.md  07-사용-가이드.md  08-크롤링-안정성-보강-2026-05.md  09-2026-05-현황-요약.md
kb-estate-collector/frontend/: Dockerfile.dev  package-lock.json  package.json  vite.config.ts
kb-estate-collector/frontend/src/: App.tsx  index.css
kb-estate-collector/scripts/: backfill_dong_code.py  backfill_facilities.py  backfill_kb_price_history.py  backfill_kb_price_history_async.py  backfill_kb_price_history_state.json  backfill_molit_state.json  backfill_molit_transactions.py  probe_complex_detail.py  probe_facility_apis.py  probe_facility_deep.py  probe_kb_login.py  probe_transaction_apis.py  run_api_discovery.py  show_batch_schedule.py
kb-estate-collector/src/: __init__.py
kb-estate-collector/src/admin_api/: __init__.py  main.py
(+104 files in other folders)
